refactor: move task as  a separate component

--- a/angular.json
+++ b/angular.json
@@ -31,8 +31,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
-              "./node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss"
+              "./node_modules/fortawesome/fontawesome-free/scss/fontawesome.scss",
+              "src/styles.scss"
             ],
             "scripts": []
           },
